# trotsky

./: .anjuta_sym_db.db  Makefile.in  README.md  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  Makefile.in  main.c  trotsky.c  trotsky.ui
